修改密码测试
